--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
-
   </head>
 
   <body id="mainsitebackground">
@@ -41,14 +40,11 @@
         </nav>
     </div>
 
-        <div ng-controller="MainCtrl">
+        <div ng-controller="MainCtrl" ng-controller="WelcomeCtrl">
           <div ng-view></div>
         </div>
 
-
-
     </div> <!-- /container -->
-
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
