bookrow padding-right

--- a/books.html
+++ b/books.html
@@ -12,9 +12,9 @@
         </div>
     </div>
     <div class="container">
-        <div class="row book">
+        <div class="row book bookrow">
           <div ng-repeat="book in books">
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-4 bookblock">
                 <div class="thumbnail">
                     <img ng-src={{book.coverimage}} id="imgnopacity" alt="...">
                     <div class="caption">
