--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <nav class="navbar" id="myTopnav">
             <div class="container" id="BarNav">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <div class="collapse navbar-collapse">
+                <div class="collapse navbar-collapse" ng-class="{'in':!navCollapsed}">
                     <ul class="nav navbar-nav navbar-left" id="header">
                         <h3>Bernhard Edmaier</h3>
                         <h6>Photography</h6>
