--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
     </div>
 
-        <div ng-controller="MainCtrl" ng-controller="WelcomeCtrl">
+        <div ng-controller="MainCtrl">
           <div ng-view></div>
         </div>
 
