--- a/dallol.html
+++ b/dallol.html
@@ -20,57 +20,20 @@
             </div>
         </div>
     </div>
+
+    <!-- /galleries ctrl below -->
+
     <div class="container" id="gallerypage">
-        <div class="row">
-            <div class="col-sm-4 col-md-4">
-                <div class="thumbnail">
-                    <a href="#/estuary"><img src="../img/Estuary_Iceland_aerial copy.jpg" alt="..."></a>
-                    <div class="caption">
-                        <h5>Estuary</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 col-md-4">
-                <div class="thumbnail">
-                    <a href="#/maelifellsander"><img src="../img/Maelifellsander_Iceland_aerial copy.jpg" alt="..."></a>
-                    <div class="caption">
-                        <h5>Maelifellsander</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 col-md-4">
-                <div class="thumbnail">
-                    <a href="#/conceptionisland"><img src="../img/ConceptionIsland_Bahamas_aerial copy.jpg" alt="..."></a>
-                    <div class="caption">
-                        <h5>Conception Island</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4 col-md-4">
-                <div class="thumbnail">
-                    <a href="#/landeyjarsander"><img src="../img/Landeyjarsander_Iceland_aerial copy.jpg" alt="..."></a>
-                    <div class="caption">
-                        <h5>Landeyjarsander</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 col-md-4">
-                <div class="thumbnail">
-                    <a href="#/searleslake"><img src="../img/SearlesLake_USA_aerial copy.jpg" alt="..."></a>
-                    <div class="caption">
-                        <h5>Searles Lake</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4 col-md-4">
-                <div class="thumbnail">
-                    <a href="#/dallol"><img src="../img/Dallol_Ethiopia_aerial copy.jpg" alt="..."></a>
-                    <div class="caption">
-                        <h5>Dallol</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+       <div class="row">
+         <div ng-repeat="gallery in galleries">
+           <div class="col-sm-4 col-md-4">
+             <div class="thumbnail">
+               <a href="{{gallery.link}}"><img ng-src="{{gallery.photo}}" alt="..."></a>
+                 <div class="caption">
+                   <h5>{{gallery.title}}</h5>
+                 </div>
+             </div>
+           </div>
+         </div>
+       </div>
     </div>
