refactor gallery prev/next

--- a/conceptionisland.html
+++ b/conceptionisland.html
@@ -4,20 +4,9 @@
         <div class="col-md-3">
             <p class="largepictitle">Conception Island</p>
             <p class="largepictext">Conception Island, Bahamas</p>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row" id="workprevnext">
-        <div class="col-md-6">
-            <a href="#/main">
-                <p class="text-left">Back to Home</p>
-            </a>
-        </div>
-        <div class="col-md-6">
-            <a href="#/maelifellsander">
-                <p class="text-right">prev</a> / <a href="#/landeyjarsander">next</p></a>
+            <p id="workprevnext">
+              <a href="#/maelifellsander">prev</a> / <a href="#/landeyjarsander">next</a>
+            </p>
         </div>
     </div>
 </div>
