--- a/dallol.html
+++ b/dallol.html
@@ -4,19 +4,9 @@
             <div class="col-md-3">
                 <p class="largepictitle">Dallol</p>
                 <p class="largepictext">Dallol, Ethiopia</p>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row" id="workprevnext">
-            <div class="col-md-6">
-                <a href="#/main">
-                    <p class="text-left">Back to Home</p>
-                </a>
-            </div>
-            <div class="col-md-6">
-                <a href="#/searleslake">
-                    <p class="text-right">prev</a> / <a href="#/main">next</p></a>
+                <p id="workprevnext">
+                  <a href="#/searleslake">prev</a> / <a href="#/main">next</a>
+                </p>
             </div>
         </div>
     </div>
