--- a/estuary.html
+++ b/estuary.html
@@ -4,20 +4,9 @@
        <div class="col-md-3">
            <p class="largepictitle">Estuary</p>
            <p class="largepictext">Landeyjarsandur Estuary, Iceland</p>
-       </div>
-   </div>
-</div>
-
-<div class="container">
-   <div class="row" id="workprevnext">
-       <div class="col-md-6">
-           <a href="#/main">
-               <p class="text-left">Back to Home</p>
-           </a>
-       </div>
-       <div class="col-md-6">
-           <a href="#/main">
-               <p class="text-right">prev</a> / <a href="#/maelifellsander">next</p></a>
+           <p id="workprevnext">
+             <a href="#/main">prev</a> / <a href="#/maelifellsander">next</a>
+           </p>
        </div>
    </div>
 </div>
