--- a/maelifellsander.html
+++ b/maelifellsander.html
@@ -4,20 +4,9 @@
             <div class="col-md-3">
                 <p class="largepictitle">Maelifellsander</p>
                 <p class="largepictext">Maelifellsander, Iceland</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row" id="workprevnext">
-            <div class="col-md-6">
-                <a href="#/main">
-                    <p class="text-left">Back to Home</p>
-                </a>
-            </div>
-            <div class="col-md-6">
-                <a href="#/estuary">
-                    <p class="text-right">prev</a> / <a href="#/conceptionisland">next</p></a>
+                <p id="workprevnext">
+                  <a href="#/estuary">prev</a> / <a href="#/conceptionisland">next</a>
+                </p>
             </div>
         </div>
     </div>
