--- a/searleslake.html
+++ b/searleslake.html
@@ -4,20 +4,9 @@
           <div class="col-md-3">
               <p class="largepictitle">Searles Lake</p>
               <p class="largepictext">Searles Lake, USA</p>
-          </div>
-      </div>
-  </div>
-
-  <div class="container">
-      <div class="row" id="workprevnext">
-          <div class="col-md-6">
-              <a href="#/main">
-                  <p class="text-left">Back to Home</p>
-              </a>
-          </div>
-          <div class="col-md-6">
-              <a href="#/landeyjarsander">
-                  <p class="text-right">prev</a> / <a href="#/dallol">next</p></a>
+              <p id="workprevnext">
+                <a href="#/landeyjarsander">prev</a> / <a href="#/dallol">next</a>
+              </p>
           </div>
       </div>
   </div>
