--- a/landeyjarsander.html
+++ b/landeyjarsander.html
@@ -1,26 +1,15 @@
-<div class="container">
-        <div class="row" id="largepicpages">
-            <div class="col-md-9"><img src="../img/Landeyjarsander_Iceland_aerial copy.jpg" class="img-responsive" id="imgnopacity" alt="Some picture"></div>
-            <div class="col-md-3">
-                <p class="largepictitle">Landeyjarsander</p>
-                <p class="largepictext">Landeyjarsander, Iceland</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row" id="workprevnext">
-            <div class="col-md-6">
-                <a href="#/main">
-                    <p class="text-left">Back to Home</p>
-                </a>
-            </div>
-            <div class="col-md-6">
-                <a href="#/conceptionisland">
-                    <p class="text-right">prev</a> / <a href="#/searleslake">next</p></a>
-            </div>
-        </div>
-    </div>
+ <div class="container">
+      <div class="row" id="largepicpages">
+          <div class="col-md-9"><img src="../img/Landeyjarsander_Iceland_aerial copy.jpg" class="img-responsive" id="imgnopacity" alt="Some picture"></div>
+          <div class="col-md-3">
+              <p class="largepictitle">Landeyjarsander</p>
+              <p class="largepictext">Landeyjarsander, Iceland</p>
+              <p id="workprevnext">
+                <a href="#/conceptionisland">prev</a> / <a href="#/searleslake">next</a>
+              </p>
+          </div>
+      </div>
+  </div>
 
     <!-- /galleries ctrl below -->
 
