change order of prev/next so that it loops through instead of going to home

--- a/dallol.html
+++ b/dallol.html
@@ -5,7 +5,7 @@
                 <p class="largepictitle">Dallol</p>
                 <p class="largepictext">Dallol, Ethiopia</p>
                 <p id="workprevnext">
-                  <a href="#/searleslake">prev</a> / <a href="#/main">next</a>
+                  <a href="#/searleslake">prev</a> / <a href="#/estuary">next</a>
                 </p>
             </div>
         </div>
