--- a/estuary.html
+++ b/estuary.html
@@ -5,7 +5,7 @@
            <p class="largepictitle">Estuary</p>
            <p class="largepictext">Landeyjarsandur Estuary, Iceland</p>
            <p id="workprevnext">
-             <a href="#/main">prev</a> / <a href="#/maelifellsander">next</a>
+             <a href="#/dallol">prev</a> / <a href="#/maelifellsander">next</a>
            </p>
        </div>
    </div>
