--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link rel="stylesheet" id="font-awesome-css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" type="text/css" media="screen">
 
     <title>Bernhard Edmaier</title>
 
@@ -45,6 +46,12 @@
         <div ng-view></div>
       </div>
 
+      <div class="scroll-top-wrapper ">
+      	<span class="scroll-top-inner">
+      		<i class="fa fa-2x fa-arrow-circle-up"></i>
+      	</span>
+      </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
     <script src="script.js"></script>
@@ -52,6 +59,29 @@
       $(document).ready(function() {
           $('body').hide().fadeIn(1500);
       });
+
+      $(function(){
+
+    	$(document).on( 'scroll', function(){
+     
+    		if ($(window).scrollTop() > 100) {
+    			$('.scroll-top-wrapper').addClass('show');
+    		} else {
+    			$('.scroll-top-wrapper').removeClass('show');
+    		}
+    	});
+
+    	$('.scroll-top-wrapper').on('click', scrollToTop);
+    });
+
+    function scrollToTop() {
+    	verticalOffset = typeof(verticalOffset) != 'undefined' ? verticalOffset : 0;
+    	element = $('body');
+    	offset = element.offset();
+    	offsetTop = offset.top;
+    	$('html, body').animate({scrollTop: offsetTop}, 500, 'linear');
+    }
+
     </script>
   </body>
 </html>
