--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       $(function(){
 
     	$(document).on( 'scroll', function(){
-     
+
     		if ($(window).scrollTop() > 100) {
     			$('.scroll-top-wrapper').addClass('show');
     		} else {
@@ -75,12 +75,10 @@
     });
 
     function scrollToTop() {
-    	verticalOffset = typeof(verticalOffset) != 'undefined' ? verticalOffset : 0;
-    	element = $('body');
-    	offset = element.offset();
-    	offsetTop = offset.top;
-    	$('html, body').animate({scrollTop: offsetTop}, 500, 'linear');
-    }
+      $('html, body').animate({
+        scrollTop: $("#mainsitebackground").offset().top
+      }, 1000);
+    };
 
     </script>
   </body>
