--- a/estuary.html
+++ b/estuary.html
@@ -27,3 +27,9 @@
      </div>
    </div>
 </div>
+
+<!-- <script>
+  $(document).ready(function() {
+      $('body').hide().fadeIn(1500);
+  });
+</script> -->
