--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
+    <!-- Custom styles -->
     <link href="style.css" rel="stylesheet">
   </head>
 
